feat: Add Track Details and Add Track

--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,8 +1,29 @@
 .home {
-  &__track-grid {
-    display: grid;
-    grid-template-columns: repeat(4, min-content);
-    justify-content: space-between;
-    row-gap: 1rem;
-  }
+	&__track-grid {
+		--grid-columns: 1;
+		display: grid;
+		grid-template-columns: repeat(var(--grid-columns), 1fr);
+		row-gap: 1rem;
+		column-gap: 1rem;
+		place-items: center;
+
+		@media screen and (min-width: 576px) {
+			--grid-columns: 2;
+		}
+		@media screen and (min-width: 768px) {
+			--grid-columns: 4;
+		}
+	}
+
+	&__isrc-input-container {
+		width: 75vw;
+		margin: auto;
+		margin-bottom: 2rem;
+	}
+	&__isrc-input {
+		&--label {
+			font-size: larger;
+			font-weight: bold;
+		}
+	}
 }
